@@ -544,5 +544,6 @@ extern void dup_tone_bank_element(int,int,int);
 extern void free_tone_bank_element(int,int,int);
 
 extern void recompute_voice_filter(int);
+extern int32 get_note_freq(Sample *, int);
 
 #endif /* ___PLAYMIDI_H_ */
