@@ -1289,7 +1289,7 @@ sample_t *resample_voice(int v, int32 *countptr)
     resampler_t saved_resample;
 
     if(vp->sample->sample_rate == play_mode->rate &&
-       vp->sample->root_freq == freq_table[vp->sample->note_to_use] &&
+       vp->sample->root_freq == get_note_freq(vp->sample, vp->sample->note_to_use) &&
        vp->frequency == vp->orig_frequency)
     {
 	int32 ofs;
@@ -1350,15 +1350,16 @@ void pre_resample(Sample * sp)
   double a, b, xdiff;
   splen_t ofs, newlen;
   sample_t *newdata, *dest, *src = (sample_t *)sp->data, *vptr;
-  int32 v, v1, v2, v3, v4, v5, i, count, incr;
+  int32 v, v1, v2, v3, v4, v5, i, count, incr, f;
   resample_rec_t resrc;
 
   ctl->cmsg(CMSG_INFO, VERB_DEBUG, " * pre-resampling for note %d (%s%d)",
 	    sp->note_to_use,
 	    note_name[sp->note_to_use % 12], (sp->note_to_use & 0x7F) / 12);
 
+  f = get_note_freq(sp, sp->note_to_use);
   a = b = ((double) (sp->root_freq) * play_mode->rate) /
-      ((double) (sp->sample_rate) * freq_table[(int) (sp->note_to_use)]);
+      ((double) (sp->sample_rate) * f);
   if((int64)sp->data_length * a >= 0x7fffffffL)
   {
       /* Too large to compute */
@@ -1400,7 +1401,7 @@ void pre_resample(Sample * sp)
   sp->loop_end = (splen_t)(sp->loop_end * b);
   free(sp->data);
   sp->data = (sample_t *) newdata;
-  sp->root_freq = freq_table[(int) (sp->note_to_use)];
+  sp->root_freq = f;
   sp->sample_rate = play_mode->rate;
   sp->low_freq = freq_table[0];
   sp->high_freq = freq_table[127];
